[ADD] watch and ekg state

--- a/Smartwatch2D/Smartwatch2D/Smartwatch2D.vcxproj
+++ b/Smartwatch2D/Smartwatch2D/Smartwatch2D.vcxproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="basic.frag" />
+    <None Include="ekg.frag" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
