--- a/Smartwatch2D/Smartwatch2D/Smartwatch2D.vcxproj
+++ b/Smartwatch2D/Smartwatch2D/Smartwatch2D.vcxproj
@@ -128,11 +128,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Render.cpp" />
+    <ClCompile Include="Textures.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="Render.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Textures.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
